Fix alignment

--- a/src/web/assets/forms/src/scss/_existing-modal.scss
+++ b/src/web/assets/forms/src/scss/_existing-modal.scss
@@ -66,10 +66,6 @@
     height: 100%;
 }
 
-body.ltr .field .required:after {
-    margin: -8px 0 0 5px !important;
-}
-
 .fui-existing-item-heading-wrap {
     position: relative;
     margin-bottom: 10px;
