--- a/src/web/assets/forms/src/scss/_form-fields.scss
+++ b/src/web/assets/forms/src/scss/_form-fields.scss
@@ -118,7 +118,7 @@
 .fui-menu li a[data-icon]:before,
 .fui-menu li a.icon:before,
 .fui-menu li a.sel:before {
-    margin: 3px 0 0 -20px !important;
+    margin: 3px 6px 0 -20px !important;
 }
 
 
